test/preprocessor/fail/bad_va_args.osl
#define TEST(x) __VA_ARGS__
